--- a/index.css
+++ b/index.css
@@ -3,9 +3,21 @@
     margin: 0%;
     
 }
+body{
+    background-image: url("image2.webp") ;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    background-size: cover;
+    background-position: center;
+    height: 1000px;
+
+ 
+    
+
+}
 .header{
     display: flex;
-    padding-left: 5%;
+    padding-left: 8%;
     padding-top: 3%;
 }
 .header h2{
