--- a/index.css
+++ b/index.css
@@ -9,21 +9,38 @@ body{
     background-size:100% 100%;
     background-size: cover;
     background-position: center;
-    height: 1000px;
-
- 
-    
-
+    height: 1200px;
 }
 .header{
-    display: flex;
-    padding-left: 8%;
+    
+    padding-left: 33%;
     padding-top: 5%;
 }
-.header h2{
-    margin-left:30% ;
+.header h1{
+    margin-left: 5%;
 }
+
 .description{
     margin-top: 15%;
+    display: flex;
+    padding-left: 5%;
 
+}
+.description img{
+    margin-left: 5%;
+  
+}
+
+
+form{
+  
+
+    margin-left: 30%;
+   
+}  
+.container h2{
+    margin-left: 30%;
+}
+.overlay{
+    
 }
