--- a/index.css
+++ b/index.css
@@ -42,10 +42,20 @@ form{
     margin-left: 30%;
 }
 .overlay{
+   
     background-color: rgb(0,0,0,0.5);
     opacity: 0.5;
     border-radius: 10px;
 }
 .container{
-    color: white;
+     color: white;
+    opacity: 9;
+    
 }
+input{
+    padding-top: 5%;
+}
+
+
+
+
