--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@ body{
   
     background-size: cover;
     background-position: center;
-    height: 1350px;
+    height: 1400px;
+
 }
 .header{
     
@@ -17,7 +18,7 @@ body{
     padding-top: 5%;
 }
 .header img{
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
 .description{
@@ -38,6 +39,7 @@ form{
   
     width: 50%;
     margin-left: 30%;
+  
    
 }  
 .container h2{
@@ -51,6 +53,7 @@ form{
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 10%;
+
 }
 .container{
      color: white;
@@ -59,6 +62,23 @@ form{
 }
 input{
     padding-top: 5%;
+}
+.footer{
+    height: 50px;
+    background-color: rgb(0,0,0,0.5);
+    opacity: 0.9;
+    border-radius: 10px;
+    color: white;
+    /* margin-top: 9%; */
+  
+}
+.footer p{
+    text-align: center;
+    padding-top: 1%;
+  
+}
+.last{
+    margin-top: 9%;
 }
 
 
