--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body{
   
     background-size: cover;
     background-position: center;
-    height: 1400px;
+    height: 1480px;
 
 }
 .header{
@@ -39,29 +39,41 @@ form{
   
     width: 50%;
     margin-left: 30%;
+    
+   
   
    
 }  
 .container h2{
-    margin-left: 30%;
+ 
+    color: white;
+    font-weight: bold;
+    text-align: center;
 }
 .overlay{
    
     background-color: rgb(0,0,0,0.5);
-    opacity: 0.5;
+    opacity: 0.9;
     border-radius: 10px;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 10%;
+    height: 400px;
+
+    
 
 }
 .container{
-     color: white;
-    opacity: 9;
+   color: white;
+   padding-top: 5%;
+   font-size: 20px;
+     
+  
     
 }
 input{
     padding-top: 5%;
+ 
 }
 .footer{
     height: 50px;
@@ -80,6 +92,12 @@ input{
 .last{
     margin-top: 9%;
 }
+label{
+    color: white;
+   
+}
+
+
 
 
 
